--- a/recipe-tomato_kr.html
+++ b/recipe-tomato_kr.html
@@ -65,7 +65,7 @@
             <div class="flex flex-col md:flex-row gap-8">
 
                 <div class="w-full md:w-1/3">
-                    <img src="Tomato08.jpg" alt="완성 사진" class="w-full h-80 object-cover rounded-lg shadow-lg mb-6 recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
+                    <img src="Tomato09.jpg" alt="완성 사진" class="w-full h-80 object-cover rounded-lg shadow-lg mb-6 recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
                     <div class="bg-white p-6 rounded-lg shadow-lg mb-6">
                         <h2 class="text-2xl font-bold mb-4 border-b-2 border-orange-400 pb-2 font-catchy">레시피 정보</h2>
                         <div class="space-y-3">
@@ -124,29 +124,31 @@
                             
                             <li class="text-lg leading-loose">
                                 <strong>재료 준비:</strong><br>
-                                토마토 윗부분에 십자 모양으로 칼집을 내고 뜨거운 물에 5분간 담가둡니다. 그동안 그릇에 달걀 2개를 풀고, 소금 약간과 식초 약간(비린내 제거용)을 넣어 잘 섞어줍니다. 토마토를 꺼내 껍질을 벗기고 큼직하게 썰어 준비합니다.
+                                토마토 윗부분에 십자 모양으로 칼집을 내고 뜨거운 물에 2분간 담가둡니다. 그리고 토마토를 꺼내 껍질을 벗겨 썰어줍니다.쪽파도 하얀 부분 과 녹색 부분을 나눠 썰어줍니다.달걀은 2개를 풀고, 소금 약간과 식초 약간(비린내 제거용)을 넣어 잘 섞어줍니다.
                                 <div class="flex flex-wrap gap-4 mt-4">
-                                    <img src="Tomato01.jpg" alt="토마토 데치기" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
-                                    <img src="Tomato02.jpg" alt="계란 풀기" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
-                                    <img src="Tomato03.jpg" alt="토마토 썰기" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
+                                    <img src="Tomato01.jpg" alt="토마토 십자" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
+                                    <img src="Tomato02.jpg" alt="토마토 껍질 벗기" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
+                                    <img src="Tomato03.jpg" alt="제료 썰기" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
+                                    <img src="Tomato04.jpg" alt="계란 치기" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
                                 </div>
                             </li>
                             
                             <li class="text-lg leading-loose">
                                 <strong>달걀 볶기:</strong><br>
-                                팬에 기름을 넉넉히 두르고 달군 뒤, 달걀물을 부어줍니다. 부드럽게 익도록 젓가락으로 저어주다가, 반쯤 익었을 때 그릇에 따로 덜어둡니다.
+                                팬에 기름을 두르고 달군 뒤, 달걀물을 부어줍니다. 잘 익도록 흔들어주며, 익었을 때 그릇에 따로 덜어둡니다.
                                 <div class="flex flex-wrap gap-4 mt-4">
-                                    <img src="Tomato04.jpg" alt="스크램블" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
-                                    <img src="Tomato05.jpg" alt="덜어둔 계란" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
+                                    <img src="Tomato05.jpg" alt="스크램블" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
+                                    <img src="Tomato06.jpg" alt="덜어둔 계란" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
                                 </div>
                             </li>
 
                             <li class="text-lg leading-loose">
                                 <strong>완성하기:</strong><br>
-                                같은 팬에 쪽파의 흰 부분을 먼저 넣어 향을 내고, 토마토를 넣어 볶습니다. 중간에 소금을 넣어 간을 하고 1~2분 정도 볶습니다. 그 후 덜어둔 달걀을 다시 넣고 섞어줍니다. 취향에 따라 설탕을 넣어 신맛을 조절합니다. 마지막으로 쪽파의 초록 부분을 넣고 마무리합니다.
+                                같은 팬에 기름 조금을 넣어,쪽파의 흰 부분을 먼저 넣어 향을 내고, 토마토를 넣어 볶습니다. 중간에 과즙이 나오면 소금과 설탕을 넣어 간을 하고 볶은 뒤,덜어둔 달걀을 다시 넣고 섞어줍니다.마지막으로 쪽파의 초록 부분을 넣고 마무리합니다.
                                 <div class="flex flex-wrap gap-4 mt-4">
-                                    <img src="Tomato06.jpg" alt="토마토 볶기" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
-                                    <img src="Tomato07.jpg" alt="합치기" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
+                                    <img src="Tomato07.jpg" alt="토마토 볶기" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
+                                    <img src="Tomato08.jpg" alt="조미료 넣기" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
+                                    <img src="Tomato09.jpg" alt="완성" class="w-40 h-32 object-cover rounded shadow recipe-image-clickable cursor-pointer transition-transform duration-300 hover:scale-105">
                                 </div>
                             </li>
                         </ol>
